the net is learning now, but it is slow process